[workspace]
members = ["ast", "interpret", "lexer", "parse"]

[package]
name = "lox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.15.0"
ast = { path = "ast" }
lexer = { path = "lexer" }
parse = { path = "parse" }
interpret = { path = "interpret" }
