[workspace]
members = [
    "unlox-ast", "unlox-cactus",
    "unlox-interpreter",
    "unlox-lexer",
    "unlox-parse",
    "unlox-tokens", "unlox-tree",
]

[package]
name = "unlox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.15.0"
unlox-ast = { path = "unlox-ast" }
unlox-lexer = { path = "unlox-lexer" }
unlox-parse = { path = "unlox-parse" }
unlox-interpreter = { path = "unlox-interpreter" }
unlox-tokens = { path = "unlox-tokens" }
unlox-tree = { version = "0.1.0", path = "unlox-tree" }

[dev-dependencies]
thiserror = "1.0.63"
