[package]
name = "unlox-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.70"
unlox-interpreter = { path = "../unlox-interpreter" }
unlox-lexer = { path = "../unlox-lexer" }
unlox-parse = { path = "../unlox-parse" }
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.70", features = ["console"] }
