[package]
name = "www"
version = "0.1.0"
authors = ["Vixu <lonevixu@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web"] }
dioxus-logger = "0.5.1"
unlox-interpreter = { path = "../unlox-interpreter" }
unlox-parse = { path = "../unlox-parse" }
unlox-lexer = { path = "../unlox-lexer" }
